--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     color:deeppink;
-    text-align:  center;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.cabeza{
+    justify-content: space-evenly;
+    background-color: aqua;
 }
