--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 body{
+    flex-direction: column;
     color:deeppink;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: aliceblue;
 }
 
 .cabeza{
-    justify-content: space-evenly;
+    display: flex;
+    justify-content: space-between;
     background-color: aqua;
+    align-items: center;
 }
