--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,37 @@
     padding: 0;
 }
 
+#cabecera{
+    display: flex;
+    align-items: center;
+    background-color: blue;
+    justify-content: space-between;
+}
+
+#cabecera p{
+    font-size: 30px;
+    padding: 10px 1px 10px 10px;
+    color: white;
+}
+
+#cabecera span{
+    color: white;
+    padding-right: 10px;
+}
+
 .container
 {
     width: 500px;
     height: 5000;
     border: 1px solid black;
+    box-shadow: -12px 10px 0px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -12px 10px 0px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: -12px 10px 0px 1px rgba(0,0,0,0.75);
     margin: 0 auto;
-    padding: 1cm;
-    text-align: center;
+    text-align: left;
     margin-top: 20px ;
+}
+
+.post-container{
+    padding: 2em 3em 2em 3em;
 }
