--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 #cabecera{
+    
     display: flex;
     align-items: center;
     background-color: blue;
@@ -14,16 +15,17 @@
 #cabecera p{
     font-size: 30px;
     padding: 10px 1px 10px 10px;
-    color: white;
+    color: red;
 }
 
 #cabecera span{
-    color: white;
+    color: red;
     padding-right: 10px;
 }
 
 .container
 {
+    background-color: blanchedalmond;
     width: 500px;
     height: 5000;
     border: 1px solid black;
