--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 #cabecera{
@@ -24,6 +24,7 @@
 
 .container
 {
+    background-color: aquamarine;
     width: 500px;
     height: 5000;
     border: 1px solid black;
